--- a/lesson_12/.gitignore
+++ b/lesson_12/.gitignore
@@ -17,5 +17,17 @@ Task_5_figures/figures/triangle/code.py
         ../.idea/
         ../savchyn zahar lesson_11.zip
         ../savchyn zahar lesson_11/
+.idea/.gitignore
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/it-step-python-course.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+savchyn zahar lesson_11.zip
+savchyn zahar lesson_11/task_1.py
+savchyn zahar lesson_11/task_2.py
+savchyn zahar lesson_11/task_3.py
+savchyn zahar lesson_11/task_4.py
+
 
 
